--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "assert": "^1.4.1",
-    "auth": "0.0.9",
     "bcrypt": "^3.0.5",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
@@ -29,7 +28,7 @@
     "react-feather": "^1.1.6",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^3.4.0",
     "react-test-renderer": "^16.11.0",
     "twilio": "^3.36.0"
   },
@@ -37,7 +36,7 @@
     "start": "react-scripts start",
     "server": "nodemon --exec babel-node server.js",
     "all": "nodemon --exec babel-node server.js | react-scripts start & wait",
-    "win-all": "start nodemon --exec babel-node server.js && start react-scripts start & wait",
+    "win-all": "start nodemon --exec babel-node server.js && start react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
